--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ boto3==1.34.21
 botocore==1.34.21
 certifi==2023.11.17
 charset-normalizer==3.3.2
-Django==5.0
+Django==4.1
 djangorestframework==3.14.0
 idna==3.6
 jmespath==1.0.1
@@ -17,3 +17,4 @@ six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
 urllib3==2.0.7
+django-storages
