--- a/ShelfSpace_Project/requirements.txt
+++ b/ShelfSpace_Project/requirements.txt
@@ -16,6 +16,6 @@ s3transfer==0.10.0
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
-urllib3==2.0.7
+urllib3
 django-storages
 google-generativeai
